--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ credentials.json
 combined_token.json
 calendar_token_*.json
 token.json
+credentials_base64.txt
+setup_credentials.py
 
 # Test files
 test_*.py
